# homelab

./: .dclintrc  .gitignore  Makefile  README.md  Working proxmox network interfaces  docker-compose.yml  justfile  todo.txt
scripts/openapi/: .gitignore  README.md  pyproject.toml
scripts/openapi/authentik_openapi/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
scripts/openapi/authentik_openapi/.openapi-generator/: FILES
scripts/openapi/authentik_openapi/authentik_openapi/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
scripts/openapi/authentik_openapi/docs/: AccessDeniedChallenge.md  AdminApi.md  AlgEnum.md  App.md  AppEnum.md  AppleChallengeResponseRequest.md  AppleLoginChallenge.md  Application.md  ApplicationRequest.md  AuthModeEnum.md  AuthTypeEnum.md  AuthenticatedSession.md  AuthenticatedSessionAsn.md  AuthenticatedSessionGeoIp.md  AuthenticatedSessionUserAgent.md  AuthenticatedSessionUserAgentDevice.md  AuthenticatedSessionUserAgentOs.md  AuthenticatedSessionUserAgentUserAgent.md  AuthenticationEnum.md  AuthenticatorAttachmentEnum.md  AuthenticatorDuoChallenge.md  AuthenticatorDuoChallengeResponseRequest.md  AuthenticatorDuoStage.md  AuthenticatorDuoStageDeviceImportResponse.md  (+581 more)
scripts/openapi/gitea_openapi/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
scripts/openapi/github_openapi/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
scripts/openapi/tailscale_openapi/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
(+7936 files in other folders)
